@@ -19,3 +19,6 @@ export:
 
 bilan:
   credentials:  bilan
+  
+config:
+  credentials:	config
